--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <div class="content">
+            <h1>MySearch</h1>
             <form class="search" id="form">
                 <div class="input_div">
                     <input type="text" name="q" class="input" id="text">
